--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -41,7 +41,7 @@
 				</div>
             </div>
             <div class="col-md-12 feature-soft-cont feature-soft" ng-if="showSunburst">
-		        <div id="sunburst" class="sunburst-pad" sunburst data="data" sunburstId="sunburst" style="width: 500px;margin: auto">
+		        <div id="sunburst" class="sunburst-pad" sunburst data="data" cid="conceptId" style="width: 500px;margin: auto">
 		        	<span class="text-center" ng-hide="sunburstLoaded">Loading <i class="fa fa-spinner fa-spin"/></span>
 		        </div>
 		    </div>
@@ -70,11 +70,11 @@
                 </ul>
             </div>
             <br/>
-            <div id="{{cat.id}}" class="col-md-12 noPad" ng-repeat="cat in categories">
+            <div class="col-md-12 noPad" ng-repeat="cat in categories">
             <form name="{{cat.id}}Form">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab">
-					  	<h3 class="panel-title" style="padding-left: 20px">
+					  	<h3 id="{{cat.id}}" class="panel-title pageitem" style="padding-left: 20px">
 						  	{{cat.label}}
 					  	</h3>
 					  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = true"><i class="fa fa-edit" ng-show="!cat.editMode"></i></a>
