--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -70,11 +70,11 @@
                 </ul>
             </div>
             <br/>
-            <div class="col-md-12 noPad" ng-repeat="cat in categories">
+            <div id="{{cat.id}}" class="col-md-12 noPad" ng-repeat="cat in categories">
             <form name="{{cat.id}}Form">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab">
-					  	<h3 id="{{cat.id}}" class="panel-title pageitem" style="padding-left: 20px">
+					  	<h3 class="panel-title pageitem" style="padding-left: 20px">
 						  	{{cat.label}}
 					  	</h3>
 					  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = true"><i class="fa fa-edit" ng-show="!cat.editMode"></i></a>
