Cleanup of the homepage, login form and footer.

--- a/platform-ui/views/includes/header.ejs
+++ b/platform-ui/views/includes/header.ejs
@@ -73,7 +73,7 @@
             <div class="modal-content">
                 <div class="modal-header" ng-if="!showForgotPassword">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <p class="modal-title" id="myModalLabel">Sign in to your Ilimi account!</p>
+                    <p class="modal-title" id="myModalLabel">Sign in to your ekStep account!</p>
                 </div>
                 <div class="modal-header" ng-if="showForgotPassword">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -154,21 +154,21 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <p class="modal-title" id="myModalLabel">Sign up and start learning!</p>
+                    <p class="modal-title" id="myModalLabel">Sign up and be part of an exciting revolution!</p>
                 </div>
                 <div class="modal-body">
-                    <p style="font-size: 18px">Welcome to ilimi. Sign in is simplified. Just use your Google+ id.</p>
+                    <p style="font-size: 18px">Welcome to ekStep. Sign in is simplified. Just use your Google+ id.</p><br/>
                     <div class="row">
                         <span class="col-md-3"></span>
                         <a href="/user/google/login/request" class="btn col-md-6 btn-social btn-google-plus btn-lg">
                             <i class="fa fa-google-plus"></i>Sign up with Google
                         </a>
                         <span class="col-md-3"></span>
-                    </div>
+                    </div><br/>
                     <div class="marTop20">
                     <p style="font-family:'FrutigerSerifLTW01-Medi 722257';">
-                    To sign in with Google+ you need to enable access to a your public profile, friend list, email address, birthday, education history and current city. However ilimi will NOT access your friend list or post anything on your timeline automatically.<br/>
-                    <span style="font-size: 12px" class="text-muted">Need more information on this? Write to us at <a href="mailto:support@ilimi.in" class="btn-link">support@ilimi.in</a></span>
+                    To sign in with Google+ you need to enable access to a your public profile, friend list, email address, birthday, education history and current city. However ekStep will NOT access your friend list or post anything on your timeline automatically.<br/><br/>
+                    <span style="font-size: 12px" class="text-muted">Need more information on this? Write to us at <a href="mailto:info@ekstep.org" class="btn-link">info@ekstep.org</a></span>
                     </p>
                     <p style="font-size: 12px" class="text-muted">By clicking Google, you agree to our <a href="/termsofuse" class="btn-link" target="_blank">Terms of Service</a> and <a href="/privacypolicy" class="btn-link" target="_blank">Privacy Policy</a>.</p>
                     </div>
