--- a/platform-ui/views/includes/footer.ejs
+++ b/platform-ui/views/includes/footer.ejs
@@ -1,64 +1,8 @@
 <div class="footer-container footerClass">
     <div class="container">
         <div class="row text-center">
-            <div class="col-md-3">
-                <div class="il-org-border">
-                    <ul class="ul-style">
-                        <li>
-                            <h3>Company</h3>
-                        </li>
-                        <li><a href="/ilimi-platform">Ilimi Platform</a>
-                        </li>
-                        <li><a href="/people">People</a>
-                        </li>
-                        <li><a href="/howitworks">Model</a>
-                        </li>
-                        <li><a href="/analytics">Analytics</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="il-purple-border">
-                    <ul class="ul-style">
-                        <li>
-                            <h3>More</h3>
-                        </li>
-                        <li><a href="/privacypolicy">Privacy</a>
-                        </li>
-                        <li><a href="/termsofuse">Terms of service</a>
-                        </li>
-                        <li><a href="/faq">FAQs</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-5 il-contact-details">
-                <div class="il-red-border">
-                <ul class="ul-style">
-                    <li>
-                        <h3>Get in Touch</h3>
-                    </li>
-                    <li><span>Perceptron Learning Solutions Pvt Ltd.</span>
-                    </li>
-                    <li class="il-address"><span class="il-display">1281, 14th Cross</span>
-                        <span>HAL 2nd Stage, Indira Nagar, Bengaluru 560038</span>
-                    </li>
-                    <li class="il-phone-detail"><span>Phone:</span> <span>080-42036844</span>
-                    </li>
-                    <li><span>Mon - Fri</span> <span>10am - 6pm</span><span> IST</span>
-                    </li>
-                </ul>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-<div class="container">
-    <div class="copyright-cont">
-        <div class="pull-left">
-            &copy; 2015 Perceptron Learning Solutions Pvt Ltd. All rights reserved.
+            We look forward to hear from you. You can reach us at <a href="mailto:info@ekstep.org" class="btn-link">info@ekstep.org</a><br/>
+            &copy; 2015 ekStep.org. All rights reserved.
         </div>
     </div>
 </div>
