--- a/platform-ui/views/web/FAQ.ejs
+++ b/platform-ui/views/web/FAQ.ejs
@@ -10,7 +10,7 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="images/favicon.png">
-    <title>Ilimi - FAQ</title>
+    <title>ekStep Learning Platform - FAQ</title>
     <% include ../includes/common-styles %>
     <% include ../includes/header-scripts %>
 </head>
