--- a/platform-ui/views/web/forgotPassword.ejs
+++ b/platform-ui/views/web/forgotPassword.ejs
@@ -8,7 +8,7 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="images/favicon.png">
-    <title>Ilimi</title>
+    <title>ekStep Learning Platform</title>
     <% include ../includes/common-styles %>
 	<% include ../includes/header-scripts %>
 </head>
