Create concept and update concept integrations

--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -25,6 +25,10 @@
 	            		<label class="control-label">Name</label>
 	            		<input type="text" ng-model="newConcept.name" class="form-control"/>
 	            	</div>
+	            	<div class="form-group col-md-6 required">
+	            		<label class="control-label">Code</label>
+	            		<input type="text" ng-model="newConcept.code" class="form-control"/>
+	            	</div>
 	            	<div class="form-group col-md-6">
 	            		<label>Description</label>
 	            		<textarea class="form-control" rows="4" ng-model="newConcept.description"></textarea>
