Success and error msg at create and update of concept

--- a/platform-ui/views/player/player.ejs
+++ b/platform-ui/views/player/player.ejs
@@ -17,6 +17,7 @@
         <% include ../includes/header %>
     </header>
     <section class="mid-container-full">
+        <div id="conformMessage" class="alert  hide" ></div>
         <div class="text-center" ng-show="loadingPlayer" style="margin-top: 50px">
             Loading <img src="/img/loading.gif"/>
         </div>
