--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -46,8 +46,10 @@
             </div>
             <div class="col-md-12 noPad padTop">
             	<div class="btn-group btn-group-xs pull-right selectVisualization" role="group" style="position: absolute; top: 10px; right: 0px; z-index: 1000">
-				  	<button type="button" class="btn btn-default {{showSunburst ? 'active' : ''}}" ng-click="selectVisualization('sunburst')"><i class="fa fa-bullseye"></i></button>
-				  	<button type="button" class="btn btn-default {{showSunburst ? '' : 'active'}}" ng-click="selectVisualization('tree')"><i class="fa fa-sitemap fa-rotate-270"></i></button>
+				  	<button type="button" class="btn btn-default" ng-click="selectVisualization('sunburst')" ng-if="!showSunburst"><i class="fa fa-bullseye"></i></button>
+				  	<button type="button" class="btn btn-default active" ng-if="showSunburst"><i class="fa fa-bullseye"></i></button>
+				  	<button type="button" class="btn btn-default active" ng-if="showTree"><i class="fa fa-sitemap fa-rotate-270"></i></button>
+				  	<button type="button" class="btn btn-default" ng-click="selectVisualization('tree')" ng-if="!showTree"><i class="fa fa-sitemap fa-rotate-270"></i></button>
 				</div>
             </div>
             <div class="col-md-12 feature-soft-cont feature-soft" ng-if="showSunburst">
@@ -55,7 +57,7 @@
 		        	<span class="text-center" ng-hide="sunburstLoaded">Loading <i class="fa fa-spinner fa-spin"/></span>
 		        </div>
 		    </div>
-		    <div class="col-md-12 feature-soft-cont feature-soft treeContainer" ng-if="showTree">
+		    <div class="col-md-12 feature-soft-cont feature-soft treeContainer" ng-show="showTree">
 		    	<div id="treeLayout" class="treeLayout"></div>
 		    </div>
 		    <div class="col-md-12 noPad padBottom">
@@ -146,9 +148,10 @@
 						<div class="panel-body" ng-switch-when="relations">
 							<div class="col-md-12">
 	                        	<table class="table table-striped table-bordered table-condensed">
-	                        		<thead><tr><th>Relation</th><th>Object</th><th ng-if="cat.editMode"></th></tr></thead>
+	                        		<thead><tr><th>Start Node</th><th>Relation</th><th>End Node</th><th ng-if="cat.editMode"></th></tr></thead>
 	                        		<tbody>
 	                        			<tr ng-repeat="rel in selectedConcept.outRelations">
+	                        				<td>{{rel.startNodeName}}</td>
 	                        				<td>{{rel.relationType}}</td>
 	                        				<td>{{rel.endNodeName}}</td>
 	                        				<td ng-if="cat.editMode">
@@ -156,6 +159,7 @@
 	                        				</td>
 	                        			</tr>
 	                        			<tr ng-repeat="rel in selectedConcept.inRelations">
+	                        				<td>{{rel.startNodeName}}</td>
 	                        				<td>{{rel.relationType}}</td>
 	                        				<td>{{rel.endNodeName}}</td>
 	                        				<td ng-if="cat.editMode">
@@ -163,7 +167,7 @@
 	                        				</td>
 	                        			</tr>
 	                        			<tr ng-if="selectedConcept.outRelations.length == 0 && selectedConcept.inRelations.length == 0">
-	                        				<td colspan="3" class="text-center">
+	                        				<td colspan="4" class="text-center">
 	                        					No relations found
 	                        				</td>
 	                        			</tr>
