game coverage visuation using heat map matrix

--- a/platform-ui/views/includes/player-scripts.ejs
+++ b/platform-ui/views/includes/player-scripts.ejs
@@ -16,6 +16,7 @@
 
 <script src="/js/app/controllers/mainController.js"></script>
 <script src="/js/app/controllers/loginController.js"></script>
+<script src="/js/app/controllers/gameVisualizationController.js"></script>
 
 <script type="text/javascript">
     $(function(){
