--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -21,6 +21,9 @@
 			<li role="presentation" ng-repeat="taxonomy in allTaxonomies">
 				<a href="javascript:void(0);">{{taxonomy.name}}</a>
 			</li>
+			<li role="presentation">
+				<a href="javascript:void(0);" ng-click="showHeatMap();">Heat Map</a>
+			</li>
 		</ul>
 	</li>
 </ul>
