--- a/platform-ui/views/includes/player-styles.ejs
+++ b/platform-ui/views/includes/player-styles.ejs
@@ -13,6 +13,12 @@
 <link rel="stylesheet" href="/css/app/custom.css" type="text/css"/>
 <link rel="stylesheet" href="/css/app/ilimi.css" type="text/css"/>
 <link rel="stylesheet" href="/css/thirdparty/font-style.css" type="text/css"/>
+
+<link rel="stylesheet" href="/css/thirdparty/iconFont.min.css" type="text/css"/>
+<link rel="stylesheet" href="/css/thirdparty/metro-bootstrap-responsive.min.css" type="text/css"/>
+<link rel="stylesheet" href="/css/thirdparty/metro-bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="/css/thirdparty/jquery.bxslider.css" type="text/css"/>
+
 <style>
     .word.w0 {
         font-family: 'BebasNeue';
