--- a/platform-ui/views/player/player.ejs
+++ b/platform-ui/views/player/player.ejs
@@ -38,5 +38,6 @@
     </section>
 
     <% include ../includes/player-scripts %>
+    <% include ../includes/commonTemplates.ejs %>
 </body>
 </html>
