--- a/platform-ui/public/css/app/ilimi.css
+++ b/platform-ui/public/css/app/ilimi.css
@@ -1968,3 +1968,60 @@ li.sortMenuItem a {
 input.validation-error {
     border: 1px solid red;
 }
+
+/** Start Game Page Styles **/
+.gameTile {
+    height: 175px !important;
+    width: 175px !important;
+    background-color: #fff !important;
+    outline: 2px solid #ddd !important;
+    margin: 0 20px 30px 0 !important;
+}
+.gameTile:hover {
+    outline: 2px solid #09c !important;
+}
+
+.gameOwner {
+    color: #ddd;
+    font-size: 12px;
+    padding: 5px 0; 
+    font-family: "Frutiger Neue W01 Thin" !important;
+}
+
+.bx-wrapper .bx-controls-direction a {
+    z-index: 10 !important;
+}
+
+.screenshotImg {
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto
+}
+
+.pad20 {
+    padding: 20px;
+}
+
+.margin0 {
+    margin: 0 !important;
+}
+
+.borderBottomSolid {
+    padding-bottom: 10px; 
+    border-bottom: 1px solid #ddd;
+}
+
+.carouselImg {
+    width: 240px !important;
+    height: 130px !important;
+}
+
+#playImg {
+    margin: -100px 110px 0;
+    position: relative;
+    z-index: 10;
+    font-size: 48px;
+    color: #09c;
+}
+/** End Game Page Styles **/
+
