--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -82,216 +82,10 @@
                 </ul>
             </div>
             <br/>
-            <div id="{{cat.id}}" class="col-md-12 noPad" ng-repeat="cat in categories">
-            <form name="{{cat.id}}Form">
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab">
-					  	<h3 class="panel-title pageitem" style="padding-left: 20px">
-						  	{{cat.label}}
-					  	</h3>
-					  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = true"><i class="fa fa-edit" ng-show="!cat.editMode"></i></a>
-					  	<a href="#" ng-if="cat.editable" class="pull-right padRight10" ng-click="cat.editMode = false"><i class="fa fa-close" ng-show="cat.editMode"></i></a>
-					</div>
-					<div class="panel-collapse collapse in" role="tabpanel" ng-switch on="cat.id">
-						<div class="panel-body" ng-switch-when="tags">
-							<div class="col-md-12">
-								<span class="label label-default tag" ng-repeat="tag in selectedConcept.tags">
-									{{tag}}&nbsp;<a href="javascript:void(0)" ng-click="deleteTag(selectedConcept.tags, $index, tagForm)" ng-if="cat.editMode"><i class="fa fa-close"></i></a>
-								</span>
-								<div class="alert alert-info" ng-if="!selectedConcept.tags || selectedConcept.tags.length == 0">No tags found</div>
-							</div>
-							<div class="col-md-12 marginTop20" ng-show="cat.editMode">
-	                        	<div class="row form-group marginTop20" ng-show="cat.addNew">
-					                <div class="col-md-5">
-					                    <label>Tag Type</label>
-					                    <select ng-model="cat.newTagType" class="form-control">
-					                    	<option value="system">System Tag</option>
-					                    	<option value="custom">Custom Tag</option>
-					                    </select>
-					                </div>
-					                <div class="col-md-5" ng-if="cat.newTagType == 'system'">
-					                    <label>Value</label>
-					                    <select ng-model="cat.newTagValue" ng-options="tag.name for tag in getSystemTags()" class="form-control">
-					                    </select>
-					                </div>
-					                <div class="col-md-5" ng-if="cat.newTagType != 'system'">
-					                    <label>Value</label>
-					                    <input type="text" ng-model="cat.newTagValue" class="form-control" />
-					                </div>
-					                <div class="col-md-2">
-					                	<label>&nbsp;</label>
-					                    <button class="btn btn-primary btn-sm form-control" ng-click="addNewTag(cat)">Add</button>
-					                </div>
-					            </div>
-	                        	<button class="btn btn-primary btn-sm" ng-show="!cat.addNew" ng-click="addNew(cat);">Add New Tag</button>
-	                        </div>
-						</div>
-						<div class="panel-body" ng-switch-when="comments">
-							<div class="col-md-12">
-	                        	<table class="table table-striped table-bordered table-condensed">
-	                        		<thead><tr><th>Comment</th><th>Comment By</th><th>Comment Date</th></tr></thead>
-	                        		<tbody>
-	                        			<tr ng-repeat="comment in selectedConcept.comments">
-	                        				<td>{{comment.comment}}</td>
-	                        				<td>{{comment.commentBy}}</td>
-	                        				<td>{{comment.commentDate | date:'yyyy-MM-dd HH:mm'}}</td>
-	                        			</tr>
-	                        			<tr ng-if="selectedConcept.comments.length == 0">
-	                        				<td colspan="3" class="text-center">
-	                        					No comments found
-	                        				</td>
-	                        			</tr>
-	                        		</tbody>
-	                        	</table>
-	                        </div>
-						</div>
-						<div class="panel-body" ng-switch-when="relations">
-							<div class="col-md-12">
-	                        	<table class="table table-striped table-bordered table-condensed">
-	                        		<thead><tr><th>Start Node</th><th>Relation</th><th>End Node</th><th ng-if="cat.editMode"></th></tr></thead>
-	                        		<tbody>
-	                        			<tr ng-repeat="rel in selectedConcept.outRelations">
-	                        				<td>{{rel.startNodeName}}</td>
-	                        				<td>{{rel.relationType}}</td>
-	                        				<td>{{rel.endNodeName}}</td>
-	                        				<td ng-if="cat.editMode">
-	                        					<a href="#"><i class="fa fa-close"></i></a>
-	                        				</td>
-	                        			</tr>
-	                        			<tr ng-repeat="rel in selectedConcept.inRelations">
-	                        				<td>{{rel.startNodeName}}</td>
-	                        				<td>{{rel.relationType}}</td>
-	                        				<td>{{rel.endNodeName}}</td>
-	                        				<td ng-if="cat.editMode">
-	                        					<a href="#"><i class="fa fa-close"></i></a>
-	                        				</td>
-	                        			</tr>
-	                        			<tr ng-if="selectedConcept.outRelations.length == 0 && selectedConcept.inRelations.length == 0">
-	                        				<td colspan="4" class="text-center">
-	                        					No relations found
-	                        				</td>
-	                        			</tr>
-	                        		</tbody>
-	                        	</table>
-	                        </div>
-						</div>
-					  	<div class="panel-body form-group" ng-switch-default>
-					  		<div class="col-md-6 form-group {{(cat.editMode && prop.required) ? 'required' : ''}}" ng-repeat="prop in selectedTaxonomy.definitions[cat.id]" ng-if="prop.displayProperty != 'Hidden'">
-	                            <label class="control-label">{{prop.title}}</label>
-	                            <div ng-include="'prop_edit_template.html'" ng-if="cat.editMode && prop.displayProperty == 'Editable'"></div>
-	                            <div ng-include="'prop_read_template.html'" ng-if="!cat.editMode || prop.displayProperty == 'Readonly'"></div>
-	                        </div>
-	                        <div class="col-md-12" ng-show="cat.editMode">
-	                        	<div class="row form-group marginTop20" ng-show="cat.addNew">
-					                <div class="col-md-5">
-					                    <label>Name</label>
-					                    <input type="text" ng-model="cat.newMetadataName" class="form-control" />
-					                </div>
-					                <div class="col-md-5">
-					                    <label>Value</label>
-					                    <input type="text" ng-model="cat.newMetadataValue" class="form-control" />
-					                </div>
-					                <div class="col-md-2">
-					                	<label>&nbsp;</label>
-					                    <button class="btn btn-primary btn-sm form-control" ng-click="addNewMetadata(cat)">Add</button>
-					                </div>
-					            </div>
-	                        	<button class="btn btn-primary btn-sm" ng-show="!cat.addNew" ng-click="addNew(cat);">Add New</button>
-	                        </div>
-	                        <div class="col-md-12" ng-show="cat.id == 'audit'" ng-init="cat.auditHistory = false">
-	                        	<a href="javascript:void(0)" ng-click="cat.auditHistory = true" ng-if="!cat.auditHistory" class="btn-link">
-	                        		Show Audit History
-	                        	</a>
-	                        	<a href="javascript:void(0)" ng-click="cat.auditHistory = false" ng-if="cat.auditHistory" class="btn-link">
-	                        		Hide Audit History
-	                        	</a>
-	                        	<table class="table table-striped table-bordered table-condensed {{cat.auditHistory ? '' : 'hide'}}">
-	                        		<thead><tr><th>Version Number</th><th>Version Created By</th><th>Version Date</th><th>Actions</th></tr></thead>
-	                        		<tbody>
-	                        			<tr ng-repeat="ah in selectedConcept.auditHistory">
-	                        				<td>{{ah.versionNo}}</td>
-	                        				<td>{{ah.versionCreatedBy}}</td>
-	                        				<td>{{ah.versionDate | date:'yyyy-MM-dd HH:mm'}}</td>
-	                        				<td>
-	                        					<a href="#" class="disabled btn-link">Compare</a><br/>
-	                        					<a href="#" class="disabled btn-link">Revert</a>
-	                        				</td>
-	                        			</tr>
-	                        			<tr ng-if="selectedConcept.auditHistory.length == 0">
-	                        				<td colspan="4" class="text-center">
-	                        					No audit history found
-	                        				</td>
-	                        			</tr>
-	                        		</tbody>
-	                        	</table>
-	                        </div>
-					  	</div>
-					</div>
-				</div>
-				</form>
-			</div>
-			<div class="col-md-12 padTop">
-				<div class="alert alert-danger" ng-show="validationMessages.length > 0">
-					Error saving the concept. Following are the failed validations
-					<ul style="padding-left: 25px;list-style:disc outside none">
-						<li ng-repeat="error in validationMessages">{{error}}</li>
-					</ul>
-				</div>
-				<button class="btn btn-primary pull-right" ng-click="confirmChanges()">Save Changes</button>
-			</div>
+            <div ng-include="'metadata_categories_template.html'"></div>
         </div>
     </div>
 </div>
-<div class="modal fade" id="saveChangesModal">
-    <div class="modal-dialog modal-dialog-center">
-        <div class="modal-content" style="width: 650px;">
-            <div class="modal-header">
-            	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            	<h3>Confirm Changes</h3>
-            </div>
-            <div class="modal-body">
-            	<div class="alert alert-warning">
-            		Following is the commit message derived from the changes.
-            	</div>
-            	<textarea class="form-control" rows="4" ng-model="commitMessage"></textarea>
-            </div>
-            <div class="modal-footer">
-            	<button class="btn btn-primary" ng-click="saveChanges($event)" data-loading-text="Updating Concept...">Confirm</button>
-            </div>
-        </div>
-    </div>
-</div>
-<script type="text/ng-template" id="prop_read_template.html">
 
-<div ng-switch on="prop.dataType">
-	<table class="table table-striped table-condensed" ng-switch-when="List">
-		<tr ng-repeat="val in selectedConcept.metadata[prop.propertyName]"><td>{{val}}</td></tr>
-		<tr ng-if="!selectedConcept.metadata[prop.propertyName] || selectedConcept.metadata[prop.propertyName].length == 0"><td>None</td></tr>
-	</table>
-	<table class="table table-striped table-condensed" ng-switch-when="Multi-Select">
-		<tr ng-repeat="val in selectedConcept.metadata[prop.propertyName]"><td>{{val}}</td></tr>
-		<tr ng-if="!selectedConcept.metadata[prop.propertyName] || selectedConcept.metadata[prop.propertyName].length == 0"><td>None</td></tr>
-	</table>
-	<span ng-switch-when="Date">{{selectedConcept.metadata[prop.propertyName] | date:'yyyy-MM-dd HH:mm'}}</span>
-	<span ng-switch-default>{{selectedConcept.metadata[prop.propertyName] || 'NA'}}</span>
-</div>
+<div ng-include="'save_confirmation_template.html'"></div>
 
-</script>
-
-<script type="text/ng-template" id="prop_edit_template.html">
-
-<div ng-switch on="prop.dataType">
-	<table class="table table-striped table-condensed" ng-switch-when="List">
-		<tr ng-repeat="val in selectedConcept.metadata[prop.propertyName] track by $index">
-			<td><input type="text" ng-model="selectedConcept.metadata[prop.propertyName][$index]" class="form-control"/></td>
-			<td><a href="javascript:void(0)" ng-click="deleteListValue(prop.propertyName, $index,cat.id + 'Form')"><i class="fa fa-close"></i></a></td>
-		</tr>
-		<tfoot><tr><td><a href="javascript:void(0)" ng-click="addListValue(prop.propertyName)">Add <i class="fa fa-plus"></i></a></td></tr></tfoot>
-	</table>
-	<select ng-switch-when="Multi-Select" ng-model="selectedConcept.metadata[prop.propertyName]" ng-options="val for val in prop.range" class="form-control" multiple="true"></select>
-	<select ng-switch-when="Select" ng-model="selectedConcept.metadata[prop.propertyName]" ng-options="val for val in prop.range" class="form-control"></select>
-	<input ng-switch-when="Number" type="number" ng-model="selectedConcept.metadata[prop.propertyName]" class="form-control {{prop.error ? 'validation-error': ''}}" placeholder="{{prop.description}}"/>
-	<input ng-switch-when="Text" type="text" ng-model="selectedConcept.metadata[prop.propertyName]" class="form-control {{prop.error ? 'validation-error': ''}}"  placeholder="{{prop.description}}"/>
-</div>
-
-</script>
