--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -19,7 +19,7 @@
 		</div>
 		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 			<li role="presentation" ng-repeat="taxonomy in allTaxonomies">
-				<a href="javascript:void(0);">{{taxonomy.name}}</a>
+				<a href="javascript:void(0);" ng-click="viewGameList(taxonomy.id)">{{taxonomy.name}}</a>
 			</li>
 			<li role="presentation">
 				<a href="javascript:void(0);" ng-click="showHeatMap();">Heat Map</a>
