--- a/platform-ui/views/includes/player-scripts.ejs
+++ b/platform-ui/views/includes/player-scripts.ejs
@@ -13,6 +13,7 @@
 <script src="/js/app/dndTree.js" type="text/javascript"></script>
 <script src="/js/thirdparty/underscore.js"></script>
 <script src="/js/thirdparty/string.min.js"></script>
+<script src="/js/thirdparty/jquery.bxslider.min.js"></script>
 
 <script src="/js/app/controllers/mainController.js"></script>
 <script src="/js/app/controllers/loginController.js"></script>
