--- a/platform-ui/public/css/app/ilimi.css
+++ b/platform-ui/public/css/app/ilimi.css
@@ -1972,9 +1972,9 @@ input.validation-error {
 /** Start Game Page Styles **/
 .gameTile {
     height: 175px !important;
-    width: 175px !important;
+    /*width: 175px !important;*/
     background-color: #fff !important;
-    outline: 2px solid #ddd !important;
+    /*outline: 2px solid #ddd !important;*/
     margin: 0 20px 30px 0 !important;
 }
 .gameTile:hover {
@@ -2022,6 +2022,10 @@ input.validation-error {
     z-index: 10;
     font-size: 48px;
     color: #09c;
+}
+
+.metro .tile:hover {
+    outline: none !important;
 }
 /** End Game Page Styles **/
 
