--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -6,13 +6,13 @@
             </div>
             <div class="col-md-12 noPad padTop">
             	<div class="metro">
-            		<div class="tile gameTile" ng-repeat="game in games" ng-click="viewGame(game.identifier)">
-	    				<div class="tile-content image">
+            		<div class="tile gameTile" ng-repeat="game in games" ng-click="viewGame(game.identifier)" style="border: 1px solid #eee;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+	    				<div class="tile-content image" style="padding: 15px;">
 	        				<img ng-src="{{game.appIcon}}" ng-if="game.appIcon">
 	        				<img src="/img/not_available.jpg" ng-if="!game.appIcon">
 	    				</div>
-	    				<div class="brand bg-cyan">
-        					<span class="label fg-white" style="text-align: left">
+	    				<div class="brand bg-white">
+        					<span class="label fg-black" style="text-align: left;">
         						{{game.name}}
         						<div class="gameOwner" ng-if="game.description">{{game.description}}</div>
         					</span>
