--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -16,6 +16,7 @@
         						{{game.name}}
         						<div class="gameOwner" ng-if="game.description">{{game.description}}</div>
         					</span>
+                            <span class="label fg-black game-status" style="color: green !important; font-weight:bold !important;">Mock</span>
     					</div>
 					</div>
             	</div>
