--- a/platform-ui/public/templates/player/game.html
+++ b/platform-ui/public/templates/player/game.html
@@ -9,24 +9,26 @@
                 	{{selectedConcept.metadata.name}}
                 </h2>
             </div>
-            <div class="col-md-12 noPad padTop marginBottom15 borderBottomSolid">
+            <div class="col-md-12 noPad padTop marginBottom15 borderBottomSolid" style="background-color: #f5f5f5;">
             	<div class="col-md-3 noPad">
             		<img ng-src="{{selectedConcept.metadata.posterImage}}" style="width: 100%; height: 100%" ng-if="selectedConcept.metadata.posterImage"/>
             		<img src="/img/not_available.jpg" style="width: 100%; height: 100%" ng-if="!selectedConcept.metadata.posterImage"/>
             	</div>
             	<div class="col-md-9">
             		<div class="des_container">
-                    <span class="des_content">
-                    	{{selectedConcept.metadata.description}}
-                    </span>
+                    <div class="des_content" style="font-size:x-large;">{{selectedConcept.metadata.name}}</div>
+                    <div ng-if="selectedConcept.metadata.developer">
+                      <a href="javascript: void(0)"><span class="game-dev">{{selectedConcept.metadata.developer}}</span></a>
+                    </div>
+                    <div ng-if="selectedConcept.metadata.owner">
+                      <a href="javascript: void(0)"><span class="game-dev">{{selectedConcept.metadata.owner}}</span></a>
+                    </div>
+                    <button class="btn btn-sm btn-primary marginTop10 marginBottom10 disabled">Mock</button>
                 	</div>
                 	<div>
-                		<span class="pull-left marRight50 marginTop10" ng-if="selectedConcept.metadata.developer">
-                			<span>Developed by: </span><a href="javascript: void(0)"><h3 class="margin0">{{selectedConcept.metadata.developer}}</h3></a>
-                		</span>
-                		<span class="pull-left marRight50 marginTop10" ng-if="selectedConcept.metadata.owner">
-                			Owned by: <a href="javascript: void(0)"><h3 class="margin0">{{selectedConcept.metadata.owner}}</h3></a>
-                		</span>
+                    <span class="des_content">
+                      {{selectedConcept.metadata.description}}
+                    </span>
                 	</div>
             	</div>
             </div>
