--- a/platform-ui/public/templates/player/gameVisualization.html
+++ b/platform-ui/public/templates/player/gameVisualization.html
@@ -82,12 +82,32 @@ text.text-hover {
     <div class=" wallActivityHeader">
         <div class="editContent">
             <div class="headerAsk" id="activityStream">
-                <h2>Heat Map</h2>
+                <h2>Game Coverage - Numeracy</h2>
             </div>
-            <div id="tooltip" class="hidden">
-        		<p><span id="value"></p>
-			</div>
-            <div class="col-md-12 feature-soft-cont feature-soft" style="padding: 0 !important">
+            <div class="col-md-12 noPad marginTop20">
+                <ul class="feature-list-glanceitems col-md-12">
+                    <li>
+                        <h3 class="ng-binding">{{stats.noOfGames}}</h3>
+                        <span># of Games</span>
+                    </li>
+                    <li>
+                        <h3 class="ng-binding">{{stats.noOfConcepts}}</h3>
+                        <span># of Micro Concepts</span>
+                    </li>
+                    <li>
+                        <h3 class="ng-binding">{{stats.conceptsWithNoGame}}</h3>
+                        <span>Concepts without a game</span>
+                    </li>
+                    <li>
+                        <h3 class="ng-binding">{{stats.conceptsWithNoScreener}}</h3>
+                        <span>Concepts without a screener</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-12 feature-soft-cont feature-soft marginTop20" style="padding: 0 !important">
+                <div id="tooltip" class="hidden">
+                    <p><span id="value"></p>
+                </div>
                 <div id="chart" style='overflow:auto; width:100%px; height:480px;'></div>
             </div>
         </div>
