added bottom margin to filter dropdown

--- a/platform-ui/public/templates/player/gameVisualization.html
+++ b/platform-ui/public/templates/player/gameVisualization.html
@@ -104,7 +104,7 @@ text.text-hover {
                     </li>
                 </ul>
             </div>
-            <div class="col-md-12 noPad form-inline marginTop20">
+            <div class="col-md-12 noPad form-inline marginTop20 marginBottom20">
                 <div class="form-group col-md-4 noPad">
                     <label>Order:</label>
                     <select id="order" class="form-control">
