change the image for dashboard link

--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -29,7 +29,7 @@
 
 	<li class="dropdown forumsTab common_box" ng-if="dashboardLinks && dashboardLinks.title">
 		<div class="dropdown dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">
-			<i class="forumsImg"></i>
+			<i class="communityImg"></i>
 			<span class="lefttab">{{dashboardLinks.title}}</span>
 		</div>
 		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" ng-if="dashboardLinks.links">
