Title changes footer text change after login concept map sunburst size reduce.

--- a/platform-ui/views/includes/right-sidebar.ejs
+++ b/platform-ui/views/includes/right-sidebar.ejs
@@ -15,7 +15,7 @@
 		</div>
 		<div class="il-rt-container recentContent marginBottom20 rightBarConceptMenu hide" bs-scrollspy-list>
 			<div class="il-sc-header il-dd-header pad0">
-				<h3>Concept</h3>
+				<h3>Concept Details</h3>
 			</div>
 			<div id="sidebarScrollSpy" class="bs-docs-sidebar">
 				<nav class="il-rt-notn">
@@ -29,7 +29,7 @@
 		</div>
 		<div class="il-rt-container recentContent marginBottom20 rightBarGameMenu hide" bs-scrollspy-list>
 			<div class="il-sc-header il-dd-header pad0">
-				<h3>Game</h3>
+				<h3>Game Details</h3>
 			</div>
 			<div id="sidebarScrollSpy" class="bs-docs-sidebar">
 				<nav class="il-rt-notn">
