--- a/platform-ui/views/includes/logged-footer.ejs
+++ b/platform-ui/views/includes/logged-footer.ejs
@@ -1,17 +1,9 @@
 <div class="footerClass container-full pull-left col-md-12 text-center">
     <div class="footerAbs">
         <div class="copyright-cont pull-left col-md-12 text-center">
-            <div>
-                <a href="/">Home</a>
-                <span class="divider">&nbsp;</span>
-                <a href="/ilimi-platform">Ilimi Platform</a>
-                <span class="divider">&nbsp;</span>
-                <a href="/people">People</a>
-                <span class="divider">&nbsp;</span>
-                <a href="/FAQ">FAQ</a>
-            </div>
             <div class="text-center">
-                &copy; 2015 Perceptron Learning Solutions Pvt Ltd. All rights reserved.
+                We look forward to hear from you. You can reach us at <a href="mailto:info@ekstep.org" class="btn-link">info@ekstep.org</a><br/>
+            &copy; 2015 ekStep.org. All rights reserved.
             </div>
         </div>
     </div>
